Closed
Bug 180951
Opened 23 years ago
Closed 23 years ago
Profile directory never changes on profile switch
Categories
(Core Graveyard :: Profile: BackEnd, defect)
Core Graveyard
Profile: BackEnd
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.3alpha
People
(Reporter: ccarlen, Assigned: ccarlen)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.03 KB,
patch
|
KaiE
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
Regression from my recent profile directory service provider refactoring. Patch
coming up. With this patch, the one Kai updated on bug 97622 works.
| Assignee | ||
Comment 1•23 years ago
|
||
I think this code was expecting that, on a switch, the dir would be cleared to
nsnull first, then set to a new directory. Silly, and that's not what profile
mgr was doing.
Comment 2•23 years ago
|
||
Thanks, I can confirm this patch makes profile switching from bug 97622 work on
Linux.
Keywords: regression,
topembed
Comment 3•23 years ago
|
||
That's weird, I did not add the keywords that were mentioned in the bugmail and
that I'm now removing - although the bugmail said so.
Keywords: regression,
topembed
| Assignee | ||
Updated•23 years ago
|
Attachment #106822 -
Flags: superreview?(alecf)
Attachment #106822 -
Flags: review?(kaie)
Comment 4•23 years ago
|
||
Comment on attachment 106822 [details] [diff] [review]
patch
do we want to check if aProfileDir == mProfileDir
(or rather, if mProfileDir.Equals(aProfileDir,...) )
just to make sure we aren't doing extra work..
Comment 5•23 years ago
|
||
Comment on attachment 106822 [details] [diff] [review]
patch
and actually, maybe have an NS_WARNING or NS_ASSERTION if they are equal, just
to warn developers if they've called it that way by accident.
| Assignee | ||
Comment 6•23 years ago
|
||
There is a check in the profile mgr which happens way before it calls on this
object. But, the check is cheap and to cover the case of this object being used
standalone without profile mgr, I'll put a check in here as well.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.3alpha
| Assignee | ||
Comment 7•23 years ago
|
||
Adds the equality check.
Attachment #106822 -
Attachment is obsolete: true
Comment 8•23 years ago
|
||
Comment on attachment 107047 [details] [diff] [review]
patch-2
cool, yeah that was my concern.. sr=alecf
Attachment #107047 -
Flags: superreview+
Comment 9•23 years ago
|
||
Comment on attachment 107047 [details] [diff] [review]
patch-2
r=kaie
Attachment #107047 -
Flags: review+
| Assignee | ||
Comment 10•23 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 11•23 years ago
|
||
Comment on attachment 106822 [details] [diff] [review]
patch
removing the "request review" flags on those patches because they show up in my
request report :)
Attachment #106822 -
Flags: superreview?(alecf)
Attachment #106822 -
Flags: review?(kaie)
Updated•23 years ago
|
QA Contact: ktrina → gbush
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•