Bug 180951 - profile directory never changes on profile switch. r=kaie/sr=alecf